--- a/litblogs/.env
+++ b/litblogs/.env
@@ -4,3 +4,13 @@ ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 ADMIN_ACCESS_CODE=Z4RT8B2V
 TEACHER_ACCESS_CODE=G7K2M9XQ
+
+# Frontend URL (for email reset links)
+FRONTEND_URL=http://localhost:5173
+
+# Email Configuration for Password Reset
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_USERNAME=switcharoohelp@gmail.com
+EMAIL_PASSWORD=ieaqeinyerwfszbh
+EMAIL_FROM=LitBlog <switcharoohelp@gmail.com>
