--- a/litblogs/.env
+++ b/litblogs/.env
@@ -8,9 +8,9 @@ TEACHER_ACCESS_CODE=G7K2M9XQ
 # Frontend URL (for email reset links)
 FRONTEND_URL=http://localhost:5173
 
-# Email Configuration for Password Reset
+# Email Configuration for Password Reset (Gmail SMTP)
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
-EMAIL_USERNAME=switcharoohelp@gmail.com
-EMAIL_PASSWORD=ieaqeinyerwfszbh
-EMAIL_FROM=LitBlog <switcharoohelp@gmail.com>
+EMAIL_USERNAME=litblogapi@gmail.com
+EMAIL_PASSWORD=esed jksn znee xuiy
+EMAIL_FROM=LitBlog <litblogapi@gmail.com>
